# django-gantt

./: .gitignore  README.md  pyproject.toml
ganttchart/ganttchart/: asgi.py  settings.py  urls.py  wsgi.py
