[tool.poetry]
name = "django-gantt"
version = "0.1.0"
description = ""
authors = ["kmhk-naka <phytran35@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
pandas = "^1.2.3"
plotly = "^4.14.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.0"
autopep8 = "^1.5.6"
icecream = "^2.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
